...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#1D1D1D" />

        <ImageButton
            android:id="@+id/comments_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/comment2"
            android:background="@android:color/transparent"
            app:tint="@color/mood_confusion"
            android:layout_marginTop="8dp"
...
